# fem-with-dealii-2022

./: .gitignore  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_boundary_values-members.html  class_boundary_values.html  class_boundary_values.js  class_boundary_values__inherit__graph.dot  class_boundary_values__inherit__graph.map  class_boundary_values__inherit__graph.md5  class_poisson-members.html  class_poisson.html  class_poisson.js  class_poisson__inherit__graph.dot  class_poisson__inherit__graph.map  class_poisson__inherit__graph.md5  class_poisson_tester-members.html  class_poisson_tester.html  class_poisson_tester.js  class_poisson_tester__inherit__graph.dot  class_poisson_tester__inherit__graph.map  class_poisson_tester__inherit__graph.md5  class_right_hand_side-members.html  class_right_hand_side.html  class_right_hand_side.js  class_right_hand_side__inherit__graph.dot  class_right_hand_side__inherit__graph.map  class_right_hand_side__inherit__graph.md5  class_step3-members.html  class_step3.html  class_step3.js  class_step3__inherit__graph.dot  class_step3__inherit__graph.map  class_step3__inherit__graph.md5  class_step3_tester-members.html  class_step3_tester.html  class_step3_tester.js  class_step3_tester__inherit__graph.dot  class_step3_tester__inherit__graph.map  (+305 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: doxygen.yml  indentation.yml  tests.yml
doc/: Doxyfile
docker/: Dockerfile  build.sh  cwdiff
labs/lab-01/: CMakeLists.txt  README.md  main.cc  pythagoras.cc  tests.cc
labs/lab-02/: CMakeLists.txt  README.md
labs/lab-02/source/: gtest.cc  step-1.cc  step-2.cc
labs/lab-03/: CMakeLists.txt  README.md
labs/lab-03/include/: step-3.h
labs/lab-03/parameters/: hyper_ball.prm  hyper_cube.prm  hyper_shell.prm
labs/lab-03/source/: step-3.cc
labs/lab-03/tests/: step-3-tester.cc
labs/lab-04/: CMakeLists.txt  LICENSE  README.md  manufactured_solution.ipynb
labs/lab-04/include/: poisson.h
labs/lab-04/latex/: graph.tex
labs/lab-04/parameters/: sin_bc.prm  sin_rhs.prm
labs/lab-04/source/: main.cc  poisson.cc  step-4.cc
labs/lab-04/tests/: gtest_main.cc  poisson-tester.cc
labs/lab-05/: CMakeLists.txt  README.md
labs/lab-05/include/: poisson.h  poisson_tester.h
labs/lab-05/source/: main.cc  poisson.cc
labs/lab-05/tests/: poisson_tester.cc
labs/lab-06/: CMakeLists.txt  README.md
labs/lab-06/include/: poisson.h
labs/lab-06/source/: main.cc  mpihello.cc  poisson.cc  step-40.cc
scripts/: bash_on_docker.sh  indent  run_command_on_docker.sh  strip_comments.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.html  all_22.js  all_23.html  all_23.js  all_24.html  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+244 more)
(+2 files in other folders)
