CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(gtest)

FIND_PACKAGE(deal.II 9.2 REQUIRED
HINTS ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR})

DEAL_II_INITIALIZE_CACHED_VARIABLES()

ADD_EXECUTABLE(gtest pythagoras.cc)
FIND_PACKAGE(GTest)
TARGET_LINK_LIBRARIES(gtest ${GTEST_LIBRARY})   
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
ENABLE_TESTING()

DEAL_II_SETUP_TARGET(gtest DEBUG)
GTEST_DISCOVER_TESTS(gtest)