CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(gtest)

FIND_PACKAGE(deal.II 9.3 REQUIRED
HINTS ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR})

DEAL_II_INITIALIZE_CACHED_VARIABLES()

ADD_EXECUTABLE(step-1 source/step-1.cc)
DEAL_II_SETUP_TARGET(step-1)

ADD_EXECUTABLE(step-2 source/step-2.cc)
DEAL_II_SETUP_TARGET(step-2)

ADD_LIBRARY(step-1-lib SHARED $<TARGET_OBJECTS:step-1>)
DEAL_II_SETUP_TARGET(step-1-lib)

ADD_LIBRARY(step-2-lib SHARED $<TARGET_OBJECTS:step-2>)
DEAL_II_SETUP_TARGET(step-2-lib)

FIND_PACKAGE(GTest REQUIRED)
ADD_EXECUTABLE(gtest source/gtest.cc)
TARGET_LINK_LIBRARIES(gtest ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY} 
                      step-1-lib step-2-lib)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
DEAL_II_SETUP_TARGET(gtest)

ENABLE_TESTING()
GTEST_DISCOVER_TESTS(gtest)